Bug 1290831 - Clarify TexUnpackBlob::TexOrSubImage's fallibility and update callers. r=cleu, a=gchang

MozReview-Commit-ID: EmkzXwek8JW